--- a/app/src/main/res/layout/adapter_character_row.xml
+++ b/app/src/main/res/layout/adapter_character_row.xml
@@ -6,7 +6,7 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardElevation="3dp"
+        card_view:cardElevation="@dimen/cardview_default_elevation"
         card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
