--- a/app/src/main/res/layout/adapter_wallet_row.xml
+++ b/app/src/main/res/layout/adapter_wallet_row.xml
@@ -6,7 +6,7 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardElevation="3dp"
+        card_view:cardElevation="@dimen/cardview_default_elevation"
         card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
@@ -15,18 +15,19 @@
             android:background="?android:attr/selectableItemBackground">
 
             <ImageView
-                android:layout_alignParentRight="true"
                 android:id="@+id/currencyLogo"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_width="30dp"
-                android:layout_height="30dp" />
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp" />
 
             <TextView
-                android:layout_centerVertical="true"
                 android:id="@+id/currencyName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:text="Name"
@@ -34,15 +35,15 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_marginRight="5dp"
                 android:id="@+id/currencyAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
-                android:layout_toLeftOf="@+id/currencyLogo"
-                android:textSize="20sp"
                 android:layout_alignParentBottom="false"
-                android:layout_centerVertical="true" />
+                android:layout_centerVertical="true"
+                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@+id/currencyLogo"
+                android:text="0"
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
